# Smart-Mandolyn-RC-710

./: .gitignore  README.md  test_client.py  test_server.py
RC-710/Schematic/: RC-710.kicad_sym  Schematic.kicad_pro  Schematic.kicad_sch
RC-710/Schematic-Modified/: Schematic.kicad_sch
RC-710/Schematic_Modified/: Schematic.kicad_sch
firmware/include/: config_enums.h
firmware_esp8266/src/: config.h  main.cpp
firmware_pico/: CMakeLists.txt  config.h  main.cpp
firmware_pico/include/: modes_t.h
firmware_wifiboard/include/: config_enums.h
firmware_wifiboard/src/: config.h
